Extended options for Root-directory